Fixed height in smaller scrollbar

--- a/code/css-snippets/smaller-scrollbar.css
+++ b/code/css-snippets/smaller-scrollbar.css
@@ -7,5 +7,4 @@
 .CodeMirror-hscrollbar,
 ::-webkit-scrollbar {
   width: 3px;
-  height: 3px;
 }
